# dividend_recon_system

./: .gitignore  README.md  pyproject.toml  requirements.txt
recon/: app_streamlit.py  cli.py  llm.py  rules.py  schemas.py
tests/: __init__.py  test_cli.py  test_integration.py  test_llm.py  test_rules.py  test_schemas.py
