[build-system]
requires = ["setuptools>=68", "wheel"]

[project]
name = "dividend-recon-system"
version = "0.1.2"
description = "Hybrid rules + LLM dividend reconciliation system (demo)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "typer>=0.12.3",
    "streamlit>=1.35.0",
    "pydantic>=2.6.0",
    "openai>=1.40.0",
]

[project.scripts]
recon = "recon.cli:app"